syntax = "proto3";
 
option go_package = "api/profile";

package profile;

service Profile {
  rpc GetProfile(GetProfileRequest) returns (ProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (ProfileResponse);
}

message GetProfileRequest {}

message UpdateProfileRequest {
  string username = 1;
  string first_name = 2;
  string last_name = 3;
  string birth_date = 4;
  string gender = 5;
  bytes avatar = 6;
}

message ProfileResponse {
  string user_id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  string birth_date = 5;
  string gender = 6;
  string avatar = 7;
}
