syntax = "proto3";

option go_package = "api/sso";

package sso;

service SSO {
  rpc Login(LoginRequest) returns (TokensResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Refresh(RefreshRequest) returns (AccessTokenResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1;
}

message TokensResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message AccessTokenResponse {
  string access_token = 1;
}

message RefreshRequest {
  string refresh_token = 1;
}
